Get rid of the note at 107:6.2 as irrelevant

--- a/tex/p107.tex
+++ b/tex/p107.tex
@@ -53,7 +53,7 @@
 \vs p107 5:6 Upon the attainment of the finaliter levels of ascendant experience, these spirits of the sixth stage appear to transmute some mind factor representing a union of certain phases of the mortal and Adjuster minds which had previously functioned as liaison between the divine and human phases of such ascending personalities. This experiential mind quality probably “supremacizes” and subsequently augments the experiential endowment of evolutionary Deity --- the Supreme Being.
 \usection{6.\bibnobreakspace Adjusters as Pure Spirits}
 \vs p107 6:1 As Thought Adjusters are encountered in creature experience, they disclose the presence and leading of a spirit influence. The Adjuster is indeed a spirit, pure spirit, but spirit plus. We have never been able satisfactorily to classify Mystery Monitors; all that can certainly be said of them is that they are truly Godlike.
-\vs p107 6:2 The Adjuster is man’s eternity possibility; man is the Adjuster’s personality possibility. Your individual Adjusters work to spiritize you in the hope of eternalizing your temporal identity. The Adjusters are saturated with the beautiful and self\hyp{}bestowing love of the Father of spirits. They truly and divinely love you; they are the prisoners of spirit hope confined within the minds of men. They long for the divinity attainment of your mortal minds that their loneliness may end, that they may be delivered with you from the limitations of material investiture and the habiliments of time.\fnc{ \bibexpl{Informational: first printing; The Adjuster is man’s \bibtextul{eternity} possibility; man is the Adjuster’s personality possibility. --- The original text does appear unusual at first glance because one expects a noun like ‘possibility’ to be modified by an adjective such as ‘eternal’; not by another noun. In this situation however, ‘eternity’ is not serving as an adjective, rather the two nouns together form a single concept or nominal group, identical in structure to the group which ends the subject sentence: “\ldots{}man is the Adjuster’s personality possibility.”}}
+\vs p107 6:2 The Adjuster is man’s eternity possibility; man is the Adjuster’s personality possibility. Your individual Adjusters work to spiritize you in the hope of eternalizing your temporal identity. The Adjusters are saturated with the beautiful and self\hyp{}bestowing love of the Father of spirits. They truly and divinely love you; they are the prisoners of spirit hope confined within the minds of men. They long for the divinity attainment of your mortal minds that their loneliness may end, that they may be delivered with you from the limitations of material investiture and the habiliments of time.
 \vs p107 6:3 Your path to Paradise is the path of spirit attainment, and the Adjuster nature will faithfully unfold the revelation of the spiritual nature of the Universal Father. Beyond the Paradise ascent and in the postfinaliter stages of the eternal career, the Adjuster may possibly contact with the onetime human partner in other than spirit ministry; but the Paradise ascent and the finaliter career are the partnership between the God\hyp{}knowing spiritualizing mortal and the spiritual ministry of the God\hyp{}revealing Adjuster.
 \vs p107 6:4 \pc We know that Thought Adjusters are spirits, pure spirits, presumably absolute spirits. But the Adjuster must also be something more than exclusive spirit reality. In addition to conjectured mindedness, factors of pure energy are also present. If you will remember that God is the source of pure energy and of pure spirit, it will not be so difficult to perceive that his fragments would be both. It is a fact that the Adjusters traverse space over the instantaneous and universal gravity circuits of the Paradise Isle.
 \vs p107 6:5 That the Mystery Monitors are thus associated with the material circuits of the universe of universes is indeed puzzling. But it remains a fact that they flash throughout the entire grand universe over the material\hyp{}gravity circuits. It is entirely possible that they may even penetrate the outer space levels; they certainly could follow the gravity presence of Paradise into these regions, and though my order of personality can traverse the mind circuits of the Conjoint Actor also beyond the confines of the grand universe, we have never been sure of detecting the presence of Adjusters in the uncharted regions of outer space.
