Embed Cosmic Citizenship Quiz in the PDF file

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -13,8 +13,8 @@ INTRODUCTION
 
 \tunemarkup{pghanlin}{\fontsize{15}{16.7}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{16.5}{19}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{15}{17}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{17}{19.4}\selectfont}
+\tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{17}{20.5}\selectfont}
 
 \bibemph{The British Study Edition of The Urantia Papers} is a translation of the Fifth Epochal Revelation (also known as ``The Urantia Book'')
 from American to British English as defined by the \bibemph{Oxford Dictionary of English}.
@@ -37,13 +37,7 @@ Many thanks to my friend Mitch Austin for helpful suggestions and comments, some
 Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to consider to be my mentor and friend.
 I highly recommend many resources available on his website at \texttt{http://www.starspring.com}.
 
-The online interactive quiz based on this book and called \bibemph{The Cosmic Citizenship Quiz} is freely accessible from our website:
-
-\begin{center}
-\upshape\bfseries http://www.bibles.org.uk
-\end{center}
-
-I invite all the readers to test their comprehension by participating in the quiz.
+This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) based on the material of the book and called \bibemph{The Cosmic Citizenship Quiz}.
 
 \begin{flushleft}
 \itshape
