--- a/tex/title.tex
+++ b/tex/title.tex
@@ -48,13 +48,14 @@ THE BRITISH STUDY EDITION\\
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{13}{15}\selectfont}
 \itshape
-The Standard Reference Text in British English\tunemarkuptwo{nofnt}{}{%
+The Standard Reference Text in British English\tunemarkuptwo{nofnt}{\\}{%
 ,\\
 with Metric Measures, Textual Variants,\\
 Study Notes \&\ \totalfigures\ Illustrations\\[1pt]
 }
 \tunemarkup{pgnexus7}{\textcolor{ubdarkred}{With Words of Jesus in Red Colour}\\[1pt]}
-Edited by Tigran Aivazian\\
+Edited by Tigran Aivazian\\[2ex]
+\tunemarkuptwo{pgkindledx}{}{With Interactive Cosmic Citizenship Quiz\\}
 }%
 \vspace*{\stretch{0.6}}
 \tunemarkuptwo{nofancydecor}{}{%
