--- a/ubook.sty
+++ b/ubook.sty
@@ -25,8 +25,7 @@
 \protected\def\hyph#1#2#3{\discretionary{#1\char\hyphenchar\font}{#2}{#3}}
 
 \RequirePackage[perpage]{footmisc}
-\RequirePackage{fancyhdr,color,etex,multicol,amssymb,xltxtra,polyglossia,hyphenat,ulem,xcolor,pagecolor,afterpage,float}
-\RequirePackage[figure]{totalcount}
+\RequirePackage{fancyhdr,color,etex,multicol,amssymb,xltxtra,polyglossia,hyphenat,ulem,xcolor,pagecolor,afterpage,float,pifont}
 
 \newcommand{\bibdropcapscolor}{black}
 \newcommand{\bibtocfont}{\fontsize{11}{13.2}\selectfont}
