Don't mention the Quiz in the KindleDX version PDF

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -12,7 +12,7 @@ INTRODUCTION
 \end{center}
 
 \tunemarkup{pghanlin}{\fontsize{15}{16.7}\selectfont}
-\tunemarkup{pgkindledx}{\fontsize{16.5}{19}\selectfont}
+\tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{17}{20.5}\selectfont}
 
@@ -37,7 +37,7 @@ Many thanks to my friend Mitch Austin for helpful suggestions and comments, some
 Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to consider to be my mentor and friend.
 I highly recommend many resources available on his website at \texttt{http://www.starspring.com}.
 
-This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) based on the material of the book and called \bibemph{The Cosmic Citizenship Quiz}.
+\tunemarkuptwo{pgkindledx}{}{This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) based on the material of the book and called \bibemph{The Cosmic Citizenship Quiz}.}
 
 \begin{flushleft}
 \itshape
