--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -1,6 +1,7 @@
 \quizheader
 \quizpart{1}
-\quizchap{1}{Divinity, Deity, and God}
+
+\quizchap{Divinity, Deity, and God}
 
 \qstart{Divinity is creature comprehensible as...}{\bibref[0:1.17]{p000 1:17}}
   {mind, spirit, and matter}{0}
@@ -26,7 +27,77 @@
   {time, space, and energy}{0}
 \qstop
 
-\quizchap{2}{Paradise}
+\qstart{Which of these functional levels corresponds to self\hyp{}expansive and creature\hyp{}identified Deity?}{\bibref[0:1.8]{p000 1:8}}
+  {Static}{0}
+  {Potential}{0}
+  {Associative}{0}
+  {Creative}{0}
+  {Evolutional}{1}
+  {Supreme}{0}
+  {Ultimate}{0}
+\qstop
+
+\qstart{Which of these functional levels corresponds to self\hyp{}willed and self\hyp{}purposive Deity?}{\bibref[0:1.5]{p000 1:5}}
+  {Static}{0}
+  {Potential}{1}
+  {Associative}{0}
+  {Creative}{0}
+  {Evolutional}{0}
+  {Supreme}{0}
+  {Ultimate}{0}
+\qstop
+
+\qstart{Which of these functional levels corresponds to self\hyp{}experiential and creature\hyp{}Creator\hyp{}unifying Deity?}{\bibref[0:1.9]{p000 1:9}}
+  {Static}{0}
+  {Potential}{0}
+  {Associative}{0}
+  {Creative}{0}
+  {Evolutional}{0}
+  {Supreme}{1}
+  {Ultimate}{0}
+\qstop
+
+\qstart{Which of these functional levels corresponds to self\hyp{}personalized and divinely fraternal Deity?}{\bibref[0:1.6]{p000 1:6}}
+  {Static}{0}
+  {Potential}{0}
+  {Associative}{1}
+  {Creative}{0}
+  {Evolutional}{0}
+  {Supreme}{0}
+  {Ultimate}{0}
+\qstop
+
+\qstart{Which of these functional levels corresponds to self\hyp{}contained and self\hyp{}existent Deity?}{\bibref[0:1.4]{p000 1:4}}
+  {Static}{1}
+  {Potential}{0}
+  {Associative}{0}
+  {Creative}{0}
+  {Evolutional}{0}
+  {Supreme}{0}
+  {Ultimate}{0}
+\qstop
+
+\qstart{Which of these functional levels corresponds to self\hyp{}projected and time\hyp{}space\hyp{}transcending Deity?}{\bibref[0:1.10]{p000 1:10}}
+  {Static}{0}
+  {Potential}{0}
+  {Associative}{0}
+  {Creative}{0}
+  {Evolutional}{0}
+  {Supreme}{0}
+  {Ultimate}{1}
+\qstop
+
+\qstart{Which of these functional levels corresponds to self\hyp{}distributive and divinely revealed Deity?}{\bibref[0:1.7]{p000 1:7}}
+  {Static}{0}
+  {Potential}{0}
+  {Associative}{0}
+  {Creative}{1}
+  {Evolutional}{0}
+  {Supreme}{0}
+  {Ultimate}{0}
+\qstop
+
+\quizchap{Paradise}
 
 \qstart{On which level of reality the Paradise values and meanings are manifest?}{\bibref[0:1.13]{p000 1:13}}
   {finite}{0}
@@ -34,7 +105,7 @@
   {absolute}{1}
 \qstop
 
-\quizchap{3}{The Seven Absolutes}
+\quizchap{The Seven Absolutes}
 
 \qstart{Which of the Seven Absolutes is known as ``the absolute of Absolutes''?}{\bibref[104:4.1]{p104 4:1}}
   {Universal Father}{1}
@@ -46,7 +117,7 @@
   {Unqualified Absolute}{0}
 \qstop
 
-\qstart{Which of the Seven Absolutes discloses the absolute and infinite personality?}{\relax}
+\qstart{Which of the Seven Absolutes discloses the absolute and infinite personality?}{\bibref[0:5.5]{p000 5:5}}
   {Universal Father}{0}
   {Eternal Son}{1}
   {Infinite Spirit}{0}
@@ -54,6 +125,35 @@
   {Deity Absolute}{0}
   {Universal Absolute}{0}
   {Unqualified Absolute}{0}
+\qstop
+
+\qstart{In which of the Seven Absolutes is the personality potentialized?}{\bibref[104:3.13]{p104 3:13}}
+  {Universal Father}{0}
+  {Eternal Son}{0}
+  {Infinite Spirit}{0}
+  {Isle of Paradise}{0}
+  {Deity Absolute}{1}
+  {Universal Absolute}{0}
+  {Unqualified Absolute}{0}
+\qstop
+
+\qstart{Which of the Seven Absolutes corresponds to the unpersonalizable potential reality?}{\bibref[0:4.2]{p000 4:2}}
+  {Universal Father}{0}
+  {Eternal Son}{0}
+  {Infinite Spirit}{0}
+  {Isle of Paradise}{0}
+  {Deity Absolute}{0}
+  {Universal Absolute}{0}
+  {Unqualified Absolute}{1}
+\qstop
+
+\quizchap{Thought Adjusters}
+
+\qstart{Thought Adjusters are...}{\bibref[0:5.9]{p000 5:9}}
+  {personal}{0}
+  {prepersonal}{1}
+  {superpersonal}{0}
+  {subpersonal}{0}
 \qstop
 
 \quizpart{2}
