Restore the usual default tags.

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -23,22 +23,22 @@
 \tunemarkuptag{private}
 
 % comment out to disable pictures
-\tunemarkuptag{pictures}
+%\tunemarkuptag{pictures}
 
 % comment out to enable footnotes
-%\tunemarkuptag{nofnt}
+\tunemarkuptag{nofnt}
 
 % comment out to disable fancy lettrine letters
-\tunemarkuptag{fancylettrine}
+%\tunemarkuptag{fancylettrine}
 
 % comment out to disable Introduction
-\tunemarkuptag{introinclude}
+%\tunemarkuptag{introinclude}
 
 % comment out to enable fancy page decorations
-%\tunemarkuptag{nofancydecor}
+\tunemarkuptag{nofancydecor}
 
 % comment out to disable cover image
-\tunemarkuptag{coverimage}
+%\tunemarkuptag{coverimage}
 
 \setdefaultlanguage{english}
 
