--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -20,7 +20,7 @@
 \tunemarkuptag{garamond}
 
 % comment out for public PDF build
-\tunemarkuptag{private}
+%\tunemarkuptag{private}
 
 % comment out to disable pictures
 %\tunemarkuptag{pictures}
