--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -160,4 +160,11 @@
 
 \quizpart{3}
 
+\qstart{What are the names of the first human beings on Urantia?}{\bibref[63:0.2]{p063 0:2}}
+  {Adam and Eve}{0}
+  {Cain and Abel}{0}
+  {Andon and Fonta}{1}
+  {Abraham and Sarah}{0}
+\qstop
+
 \quizpart{4}
