Add a few more questions.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -97,6 +97,34 @@
   {Ultimate}{0}
 \qstop
 
+\qstart{Which of these levels of reality is characterized by creature life and time\hyp{}space limitations?}{\bibref[0:1.11]{p000 1:11}}
+  {finite}{1}
+  {absonite}{0}
+  {absolute}{0}
+\qstop
+
+\qstart{Which of these levels of reality is characterized by things and beings without beginnings or endings and by the transcendence of time and space?}{\bibref[0:1.12]{p000 1:12}}
+  {finite}{0}
+  {absonite}{1}
+  {absolute}{0}
+\qstop
+
+\qstart{Which of these levels of reality is beginningless, endless, timeless, and spaceless?}{\bibref[0:1.13]{p000 1:13}}
+  {finite}{0}
+  {absonite}{0}
+  {absolute}{1}
+\qstop
+
+\qstart{Deities of eternal existence, past, present, and future are known as...}{\bibref[0:7.3]{p000 7:3}}
+  {experiential}{0}
+  {existential}{1}
+\qstop
+
+\qstart{Deities actualizing in the post\hyp{}Havona present but of unending existence throughout all future eternity are known as...}{\bibref[0:7.4]{p000 7:4}}
+  {experiential}{1}
+  {existential}{0}
+\qstop
+
 \quizchap{Paradise}
 
 \qstart{On which level of reality the Paradise values and meanings are manifest?}{\bibref[0:1.13]{p000 1:13}}
@@ -156,7 +184,44 @@
   {subpersonal}{0}
 \qstop
 
+\quizchap{Eternal Son}
+
+\qstart{Can spiritual gravity be measured?}{\bibref[7:1.8]{p007 1:8}}
+   {yes}{1}
+   {no}{0}
+\qstop
+
+\qstart{How many inhabited superuniverses are in the grand universe?}{\bibref[0:0.6]{p000 0:6}}
+   {7}{1}
+   {1}{0}
+   {1000}{0}
+   {billions}{0}
+   {unknown}{0}
+\qstop
+
 \quizpart{2}
+
+\quizchap{Local System of Satania}
+
+\qstart{What is the registration number of our planet (Urantia) in the local system of Satania?}{\bibref[15:4.5]{p015 4:5}}
+   {1}{0}
+   {777}{0}
+   {666}{0}
+   {606}{1}
+   {unknown}{0}
+   {37,011}{0}
+\qstop
+
+\qstart{How many inhabited worlds are in our local system of Satania?}{\bibref[15:4.5]{p015 4:5}}
+   {1}{0}
+   {777}{0}
+   {666}{0}
+   {619}{1}
+   {unknown}{0}
+   {thousands}{0}
+   {millions}{0}
+   {37,001}{0}
+\qstop
 
 \quizpart{3}
 
@@ -167,4 +232,88 @@
   {Abraham and Sarah}{0}
 \qstop
 
+\qstart{Which of these was the father of Cain?}{\bibref[75:5.2]{p075 5:3}}
+  {Adam}{0}
+  {Cano}{1}
+  {Andon}{0}
+  {Satan}{0}
+  {Abraham}{0}
+  {Lucifer}{0}
+\qstop
+
+\qstart{How old was Adam when he died?}{\bibref[76:5.5]{p076 5:5}}
+   {930}{0}
+   {730}{0}
+   {530}{1}
+   {130}{0}
+   {86}{0}
+   {40}{0}
+\qstop
+
+\qstart{What was the cause of Adam's death?}{\bibref[76:5.5]{p076 5:5}}
+   {weakened heart}{0}
+   {kidneys failure}{0}
+   {poisoning}{0}
+   {earthquake}{0}
+   {killed by his own son}{0}
+   {old age}{1}
+\qstop
+
+\qstart{How old was Eve when she died?}{\bibref[76:5.5]{p076 5:5}}
+   {930}{0}
+   {730}{0}
+   {511}{1}
+   {130}{0}
+   {86}{0}
+   {40}{0}
+\qstop
+
+\qstart{What was the cause of Eve's death?}{\bibref[76:5.5]{p076 5:5}}
+   {poisoning}{0}
+   {old age}{0}
+   {weakened heart}{1}
+   {earthquake}{0}
+   {kidneys failure}{0}
+   {killed by his own son}{0}
+\qstop
+
+\qstart{What was the name of the first child of Adam and Eve to be born in the second garden?}{\bibref[76:2.1]{p076 2:1}}
+   {Cain}{0}
+   {Abel}{1}
+   {Seth}{0}
+   {Sansa}{0}
+   {Adamson}{0}
+\qstop
+
+\qstart{How old were Cain and Abel when the tension between them was finally resolved?}{\bibref[76:2.5]{p076 2:5}}
+   {18 and 20}{0}
+   {20 and 18}{1}
+   {36 and 30}{0}
+   {36 and 34}{0}
+   {136 and 134}{0}
+   {16 and 14}{0}
+\qstop
+
+\quizchap{Andite Expansion in the Orient}
+
+\qstart{When did the main body of the yellow race enter China?}{\bibref[79:5.3]{p079 5:3}}
+   {600,000 years ago}{0}
+   {300,000 years ago}{1}
+   {200,000 years ago}{0}
+   {80,000 years ago}{0}
+   {3,000 years ago}{0}
+   {1,500 years ago}{0}
+\qstop
+
 \quizpart{4}
+
+\quizchap{The Bestowal of Michael on Urantia}
+
+\qstart{When was Jesus of Nazareth born?}{\bibref[122:8.7]{p122 8:7}}
+   {21 August 7.~B.C.}{1}
+   {25 December 6.~B.C.}{0}
+   {25 December 4.~B.C.}{0}
+   {1 January 1.~A.D.}{0}
+   {18 September 6.~B.C.}{0}
+   {unknown}{0}
+\qstop
