Further simplify quiz interface

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -1,7 +1,6 @@
 \quizheader
-\quizpart{1}
 
-\quizchap{Divinity, Deity, and God}
+\qpaper{0}{Foreword}
 
 \qstart{Divinity is creature comprehensible as...}
 {mind, spirit, and matter}{0}
@@ -125,15 +124,11 @@
 {existential}{0}
 \qstop
 
-\quizchap{Paradise}
-
 \qstart{On which level of reality the Paradise values and meanings are manifest?}
 {finite}{0}
 {absonite}{0}
 {absolute}{1}
 \qstop
-
-\quizchap{The Seven Absolutes}
 
 \qstart{Which of the Seven Absolutes is known as ``the absolute of Absolutes''?}
 {Universal Father}{1}
@@ -175,16 +170,12 @@
 {Unqualified Absolute}{1}
 \qstop
 
-\quizchap{Thought Adjusters}
-
 \qstart{Thought Adjusters are...}
 {personal}{0}
 {prepersonal}{1}
 {superpersonal}{0}
 {subpersonal}{0}
 \qstop
-
-\quizchap{Eternal Son}
 
 \qstart{Can spiritual gravity be measured?}
 {yes}{1}
@@ -198,10 +189,6 @@
 {billions}{0}
 {unknown}{0}
 \qstop
-
-\quizpart{2}
-
-\quizchap{Local System of Satania}
 
 \qstart{What is the registration number of our planet (Urantia) in the local system of Satania?}
 {1}{0}
@@ -222,8 +209,6 @@
 {millions}{0}
 {37,001}{0}
 \qstop
-
-\quizpart{3}
 
 \qstart{What are the names of the first human beings on Urantia?}
 {Adam and Eve}{0}
@@ -294,7 +279,7 @@
 {16 and 14}{0}
 \qstop
 
-\quizchap{Andite Expansion in the Orient}
+\qpaper{79}{Andite Expansion in the Orient}
 
 \qstart{When did the main body of the yellow race enter China?}
 {600,000 years ago}{0}
@@ -305,9 +290,7 @@
 {1,500 years ago}{0}
 \qstop
 
-\quizpart{4}
-
-\quizchap{The Bestowal of Michael on Urantia}
+\qpaper{120}{The Bestowal of Michael on Urantia}
 
 \qstart{When was Jesus of Nazareth born?}
 {21 August 7.~B.C.}{1}
