--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -105,8 +105,8 @@
    \ifnum #1=57\quizpart{3}\fi
    \ifnum #1=120\quizpart{4}\fi
    \vspace*{\stretch{0.2}}%
-   \bib@raise@anchor{\bibpdfbookmark[2]{#1. #2}{qc#1}\label{qc#1}\hypertarget{qc#1}{}}%
-   \begin{center}\titlefont\LARGE#1.\nobreakspace\MakeUppercase{#2}\end{center}
+   \bib@raise@anchor{\bibpdfbookmark[2]{#1. #2}{qc#1}\hypertarget{qc#1}{}}%
+   \begin{center}\titlefont\LARGE#1.\nobreakspace\hyperlink{p0}{\MakeUppercase{#2}}\end{center}
    \vspace*{\stretch{0.7}}%
    \newpage
 }
@@ -379,7 +379,7 @@
       \ifnum #1=57\partiii\fi
       \ifnum #1=120\partiv\fi
       \ifnum #1>0 \headerfont\bibpaperfont\papertxt\ #1\\[3pt]\fi
-      \addfontfeatures{WordSpace=2.0}\bibpapertitlefont\MakeUppercase{#2}\\
+      {\addfontfeatures{WordSpace=2.0,LetterSpace=3.0}\bibpapertitlefont\hyperlink{qc#1}{\MakeUppercase{#2}}}\\
       \vspace*{-0.5ex}\input{tex/p\thepaper-sections.tex}\vspace*{-1ex}%
    \end{center}%
 }
