Add a few more questions for Foreword

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -2,6 +2,58 @@
 
 \qpaper{0}{Foreword}
 
+\qstart{What is the name of our own world?}
+{Mars}{0}
+{Venus}{0}
+{Urantia}{1}
+{Planet of the Apes}{0}
+{The world of the Cross}{0}
+\qstop
+
+\qstart{What is the name of our local Universe?}
+{Orvonton}{0}
+{Nebadon}{1}
+{Uversa}{0}
+{Salvington}{0}
+\qstop
+
+\qstart{What is the name of our superuniverse?}
+{Orvonton}{1}
+{Nebadon}{0}
+{Uversa}{0}
+{Salvington}{0}
+\qstop
+
+\qstart{What is the capital of our superuniverse?}
+{Orvonton}{0}
+{Nebadon}{0}
+{Uversa}{1}
+{Salvington}{0}
+\qstop
+
+\qstart{How many inhabited superuniverses are in the grand universe?}
+{7}{1}
+{1}{0}
+{1000}{0}
+{billions}{0}
+{unknown}{0}
+\qstop
+
+\qstart{How is the central universe of divine perfection called?}
+{Paradise}{0}
+{Heavens}{0}
+{Havona}{1}
+{Divinington}{0}
+{Urantia}{0}
+\qstop
+
+\qstart{The seven superuniverses in association with the
+central universe are known as...}
+{grand universe}{1}
+{master universe}{0}
+{total universe}{0}
+\qstop
+
 \qstart{Divinity is creature comprehensible as...}
 {mind, spirit, and matter}{0}
 {love, mercy, and ministry}{0}
@@ -180,14 +232,6 @@
 \qstart{Can spiritual gravity be measured?}
 {yes}{1}
 {no}{0}
-\qstop
-
-\qstart{How many inhabited superuniverses are in the grand universe?}
-{7}{1}
-{1}{0}
-{1000}{0}
-{billions}{0}
-{unknown}{0}
 \qstop
 
 \qstart{What is the registration number of our planet (Urantia) in the local system of Satania?}
