Get rid of a spurious newline caused by set tw=60 in vim

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -47,8 +47,7 @@
 {Urantia}{0}
 \qstop
 
-\qstart{The seven superuniverses in association with the
-central universe are known as...}
+\qstart{The seven superuniverses in association with the central universe are known as...}
 {grand universe}{1}
 {master universe}{0}
 {total universe}{0}
