Remove Travis CI config file and add a few more questions

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -51,6 +51,24 @@
 {grand universe}{1}
 {master universe}{0}
 {total universe}{0}
+{Paradise}{0}
+\qstop
+
+\qstart{Uninhabited universes of outer space are part of...}
+{grand universe}{0}
+{master universe}{1}
+{total universe}{0}
+{Paradise}{0}
+\qstop
+
+\qstart{The unifying characterizing quality of Deity is best comprehended by creatures as...}
+{perfection}{0}
+{intelligence}{0}
+{wisdom}{0}
+{divinity}{1}
+{beauty}{0}
+{truth}{0}
+{power}{0}
 \qstop
 
 \qstart{Divinity is creature comprehensible as...}
@@ -147,6 +165,16 @@
 {Ultimate}{0}
 \qstop
 
+\qstart{Deity functioning on the first creature\hyp{}identificational level as time\hyp{}space overcontrollers of the grand universe is called...}
+{the Ultimacy of Deity}{0}
+{the Supremacy of Deity}{1}
+\qstop
+
+\qstart{Deity functioning on the second level of unifying divinity expression as effective overcontrollers and absonite upholders of the master universe is called...}
+{the Ultimacy of Deity}{1}
+{the Supremacy of Deity}{0}
+\qstop
+
 \qstart{Which of these levels of reality is characterized by creature life and time\hyp{}space limitations?}
 {finite}{1}
 {absonite}{0}
@@ -163,6 +191,21 @@
 {finite}{0}
 {absonite}{0}
 {absolute}{1}
+\qstop
+
+\qstart{Deity is the source of all that which is divine. True or False?}
+{True}{1}
+{False}{0}
+\qstop
+
+\qstart{All that which is divine is necessarily Deity. True or False?}
+{True}{0}
+{False}{1}
+\qstop
+
+\qstart{All that which is divine tends towards some phase of unity with Deity. True or False?}
+{True}{1}
+{False}{0}
 \qstop
 
 \qstart{Deities of eternal existence, past, present, and future are known as...}
