--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -9,8 +9,9 @@
 % various page sizes
 %\tunemarkuptag{pghanlin}
 %\tunemarkuptag{pgnexus7}
-\tunemarkuptag{pgkoboaurahd}
+%\tunemarkuptag{pgkoboaurahd}
 %\tunemarkuptag{pgkindledx}
+\tunemarkuptag{pgkobomini}
 
 \RequirePackage[figure,curq]{totalcount}
 \RequirePackage[\tunemarkup{pgkindledx}{doublecol,}parvs]{ubook}
@@ -20,25 +21,25 @@
 \tunemarkuptag{garamond}
 
 % comment out for public PDF build
-%\tunemarkuptag{private}
+\tunemarkuptag{private}
 
 % comment out to disable pictures
-%\tunemarkuptag{pictures}
+\tunemarkuptag{pictures}
 
 % comment out to enable footnotes
-\tunemarkuptag{nofnt}
+%\tunemarkuptag{nofnt}
 
 % comment out to disable fancy lettrine letters
-%\tunemarkuptag{fancylettrine}
+\tunemarkuptag{fancylettrine}
 
 % comment out to disable Introduction
-%\tunemarkuptag{introinclude}
+\tunemarkuptag{introinclude}
 
 % comment out to enable fancy page decorations
-\tunemarkuptag{nofancydecor}
+%\tunemarkuptag{nofancydecor}
 
 % comment out to disable cover image
-%\tunemarkuptag{coverimage}
+\tunemarkuptag{coverimage}
 
 \setdefaultlanguage{english}
 
@@ -54,7 +55,322 @@
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
 }
 
-\input tex/urantia-core.tex
+% Google Nexus 7 (or any Android 7" colour device)
+\tunemarkup{pgnexus7}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,135.5625mm}]{geometry}}
+
+% Amazon Kindle DX
+\tunemarkup{pgkindledx}{\RequirePackage[dvips,headheight=30pt,headsep=7pt,vmargin={0.27in,0.2in},hmargin={0.08in},twoside=true,papersize={140mm,203mm}]{geometry}}
+
+% 6" devices (Kindle, Nook, Hanlin V3, etc)
+\tunemarkup{pghanlin}{\RequirePackage[dvips,headheight=19pt,headsep=2pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,120.0mm}]{geometry}}
+
+% Kobo Aura HD 7"
+\tunemarkup{pgkoboaurahd}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={102.0mm,136.0mm}]{geometry}}
+
+% Kobo Mini 5"
+\tunemarkup{pgkobomini}{\RequirePackage[dvips,headheight=19pt,headsep=2pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,120.0mm}]{geometry}}
+
+% for typesetting fractions: 1/2, 1/6, etc.
+\newcommand{\bibfrac}[2]{{\addfontfeature{Fractions=On}#1/#2}}
+% for fonts which have no support for fractions uncomment these two lines
+%\RequirePackage{nicefrac}
+%\renewcommand{\bibfrac}[2]{\nicefrac{#1}{#2}}
+
+% allow inter-paragraph space to grow
+\setlength{\parskip}{2pt plus 5pt minus 2pt}
+
+%\setmainfont[WordSpace={1.2,2.5,1.0},\tunemarkup{pgnexus7}{Ligatures=NoCommon,}Mapping=tex-text]{\urantiamainfont}
+\setmainfont[WordSpace={1.2,2.5,1.0},Mapping=tex-text]{\urantiamainfont}
+\newfontfamily\titlefont[Letters=Uppercase,LetterSpace=1.0,WordSpace=2.0,Mapping=tex-text]{\urantiatitlefont}
+\newfontfamily\parttitlefont[Letters=Uppercase,LetterSpace=1.0,WordSpace=2.0,Mapping=tex-text]{\urantiaparttitlefont}
+\newfontfamily\headerfont[Letters=Uppercase,LetterSpace=2.0,Mapping=tex-text]{\urantiaheaderfont}
+%\newfontfamily\headingfont[Letters=Uppercase,LetterSpace=1.2,Numbers=Lining,Mapping=tex-text]{\urantiaheadingfont}
+\newfontfamily\headingfont[LetterSpace=1.2,Mapping=tex-text]{\urantiaheadingfont}
+\newfontfamily\headerackfont[Letters=Uppercase,LetterSpace=2.0,Mapping=tex-text]{\urantiaheaderackfont}
+\newfontfamily\explfont[Mapping=tex-text]{\urantiaexplfont}
+\newfontfamily\libertinefont[Mapping=tex-text]{Linux Libertine O}
+\newcommand{\tux}{{\libertinefont ^^^^e000}}
+
+\newcounter{paper}
+\newcounter{secnum}
+
+\fancyhead{}
+\fancyfoot{}
+\fancyhead[L]{\bibheadfont\vs@range}
+\fancyhead[R]{\bibheadfont\bibheadpagesize\thepage}
+
+\newcommand{\upartheader}[1]{%
+   \par\vspace{3ex}\pagebreak[3]%
+   {
+   \titlefont\bibtocheadfont
+    \ifnum #1=1
+       \partitxt.~\partiup
+    \fi
+    \ifnum #1=2
+       \partiitxt.~\partiiup
+    \fi
+    \ifnum #1=3
+       \partiiitxt.~\partiiiup
+    \fi
+    \ifnum #1=4
+       \partivtxt.~\partivup
+    \fi
+   }\vspace{2ex}%
+}
+
+\newcommand{\upartheadercont}[1]{%
+   \par\vspace{3ex}\pagebreak[3]%
+   {
+   \titlefont\bibtocheadfont
+    \ifnum #1=1
+       \partitxt.~\partiup~\textit{\continuedtxt}
+    \fi
+    \ifnum #1=2
+       \partiitxt.~\partiiup~\textit{\continuedtxt}
+    \fi
+    \ifnum #1=3
+       \partiiitxt.~\partiiiup~\textit{\continuedtxt}
+    \fi
+    \ifnum #1=4
+       \partivtxt.~\partivup~\textit{\continuedtxt}
+    \fi
+   }\vspace{2ex}%
+}
+
+\newcommand{\upapertitleheader}[3]{%
+   \mbox{%
+     \makebox[0.05\linewidth][l]{№}%
+     \makebox[0.57\linewidth][l]{\textsc{#1}}%
+     \makebox[0.29\linewidth][l]{\textsc{#2}}%
+     \makebox[0.05\linewidth][l]{\textsc{#3}}%
+  }%
+}
+
+\newcommand{\upapertitle}[4]{%
+   {
+     \pagebreak[3]%
+     \makebox[0.05\linewidth][r]{\headerfont#1. }%
+     \makebox[0.57\linewidth][l]{#2\bibdf}%
+     \makebox[0.29\linewidth][l]{#3\bibdf}%
+     \makebox[0.07\linewidth][r]{\headerfont\bibpr{#4}}%
+   }\vspace{0.6ex}\linebreak
+}
+
+\newcommand{\ublistelem}[1]{\kern1.0em\relax\makebox[0.2em][r]{#1}\kern0.1em\relax}
+
+\newcommand*{\usection}[1]{%
+\def\secname{#1}
+    \stepcounter{secnum}%
+    \par\raggedbottom\addtolength{\topskip}{0pt plus 20pt}\vspace*{1ex}%
+    \ifx\secname\ackn
+       {\centering\headerackfont\parbox{\columnwidth}{\itshape\centering\uppercase{#1}}\\*[3pt]}%
+    \else
+       {\centering\headerfont\addfontfeature{WordSpace=2.4}\parbox{\columnwidth}{\centering\uppercase{#1}}\\*[3pt]}%
+    \fi
+\def\bibnobreakspace{ }
+    % XXX for section-level bookmarks uncomment the following line and comment the one after
+    \bib@raise@anchor{\bibpdfbookmark[2]{#1}{\bkname_\thechnum_\curr@vs}\label{p\thepaper_\thesecnum}\hypertarget{p\thepaper_\thesecnum}{}}%
+\def\bibnobreakspace{\kern5pt\relax}
+    \flushbottom\addtolength{\topskip}{0pt plus -20pt}
+}
+
+\def\bibnobreakspace{\kern5pt\relax}
+\newcommand{\separatorline}{\begin{center}*\ \ *\ \ *\ \ *\ \ *\end{center}}
+\newcommand{\separatorshort}{\begin{center}*\ *\ *\end{center}}
+
+\newcommand{\bibtextul}[1]{\uline{#1}}
+\newcommand{\bibexpl}[1]{{\explfont #1}}
+\providecommand{\textlatin}[1]{{#1}}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\bibdropcapscolor}{ubdarkred}
+\columnseprule=0.0pt
+
+\tunemarkup{fancylettrine}{%
+\newfontfamily\lettrinefont[Mapping=tex-text]{Goudy Initialen}
+\renewcommand{\LettrineFontHook}{\lettrinefont}
+}
+
+\def\mytoday{{\ddmmyyyydate\today}}
+\def\bibchap{\printvssup{\curr@vs}}
+
+\def\vs@range{%
+  \@ifundefined{mark@vs@\thepage}{}{%
+    \bibheadpapersize\thepaper:\expandafter\expandafter\expandafter
+      \vs@range@a\csname mark@vs@\thepage\endcsname
+  }%
+}
+
+% vine leaves
+\def\hr{j}
+\def\hhr{k}
+\def\hhhr{l}
+\def\hhhhr{i}
+\def\hl{j}
+\def\hhl{k}
+\def\hhhl{l}
+\def\hhhhl{i}
+\def\topplank{fghe}
+\def\botplank{ghef}
+\def\topl{a}
+\def\topprer{f}
+\def\topr{b}
+\def\botl{c}
+\def\botprer{g}
+\def\botr{d}
+
+% plain border
+%\def\hr{y}
+%\def\hhr{y}
+%\def\hhhr{y}
+%\def\hhhhr{y}
+%\def\hl{x}
+%\def\hhl{x}
+%\def\hhhl{x}
+%\def\hhhhl{x}
+%\def\topplank{ssss}
+%\def\botplank{vvvv}
+%\def\topl{r}
+%\def\topprer{s}
+%\def\topr{t}
+%\def\botl{u}
+%\def\botprer{v}
+%\def\botr{w}
+
+\newcommand{\titleframe}{%
+\begingroup
+\tunemarkup{pgkindledx}{%
+\setlength{\unitlength}{9.8pt}%
+\fontsize{\unitlength}{\unitlength}\usefont{U}{webo}{xl}{n}
+   \begin{picture}(0,0)(0.9,-56.2)%
+     % top left corner
+     \put(0,0){\topl}
+     % top plank
+     \multiput(1,0)(4,0){9}{\topplank}
+     % top right corner
+     \put(37,0){\topprer}
+     \put(38,0){\topr}
+     % right plank
+     \multiput(38,-1)(0,-4){14}{\hr}
+     \multiput(38,-2)(0,-4){14}{\hhr}
+     \multiput(38,-3)(0,-4){14}{\hhhr}
+     \multiput(38,-4)(0,-4){14}{\hhhhr}
+     % left plank
+     \multiput(0,-1)(0,-4){14}{\hhhhl}
+     \multiput(0,-2)(0,-4){14}{\hl}
+     \multiput(0,-3)(0,-4){14}{\hhl}
+     \multiput(0,-4)(0,-4){14}{\hhhl}
+     % bottom left corner
+     \put(0,-57){\botl}
+     % bottom plank
+     \multiput(1,-57)(4,0){9}{\botplank}
+     % bottom right corner
+     \put(37,-57){\botprer}
+     \put(38,-57){\botr}
+   \end{picture}%
+}%
+\tunemarkup{pghanlin}{%
+\setlength{\unitlength}{5.8pt}%
+\fontsize{\unitlength}{\unitlength}\usefont{U}{webo}{xl}{n}
+   \begin{picture}(0,0)(1.6,-55.9)%
+     % top left corner
+     \put(0,0){\topl}
+     % top plank
+     \multiput(1,0)(4,0){10}{\topplank}
+     % top right corner
+     \put(41,0){\topprer}
+     \put(42,0){\topr}
+     % right plank
+     \multiput(42,-1)(0,-4){14}{\hr}
+     \multiput(42,-2)(0,-4){14}{\hhr}
+     \multiput(42,-3)(0,-4){14}{\hhhr}
+     \multiput(42,-4)(0,-4){14}{\hhhhr}
+     % left plank
+     \multiput(0,-1)(0,-4){14}{\hhhhl}
+     \multiput(0,-2)(0,-4){14}{\hl}
+     \multiput(0,-3)(0,-4){14}{\hhl}
+     \multiput(0,-4)(0,-4){14}{\hhhl}
+     % bottom left corner
+     \put(0,-57){\botl}
+     % bottom plank
+     \multiput(1,-57)(4,0){10}{\botplank}
+     % bottom right corner
+     \put(41,-57){\botprer}
+     \put(42,-57){\botr}
+   \end{picture}%
+}%
+\tunemarkup{pgkoboaurahd}{%
+\setlength{\unitlength}{6.6pt}%
+\fontsize{\unitlength}{\unitlength}\usefont{U}{webo}{xl}{n}
+   \begin{picture}(0,0)(1.6,-55.9)%
+     % top left corner
+     \put(0,0){\topl}
+     % top plank
+     \multiput(1,0)(4,0){10}{\topplank}
+     % top right corner
+     \put(41,0){\topprer}
+     \put(42,0){\topr}
+     % right plank
+     \multiput(42,-1)(0,-4){14}{\hr}
+     \multiput(42,-2)(0,-4){14}{\hhr}
+     \multiput(42,-3)(0,-4){14}{\hhhr}
+     \multiput(42,-4)(0,-4){14}{\hhhhr}
+     % left plank
+     \multiput(0,-1)(0,-4){14}{\hhhhl}
+     \multiput(0,-2)(0,-4){14}{\hl}
+     \multiput(0,-3)(0,-4){14}{\hhl}
+     \multiput(0,-4)(0,-4){14}{\hhhl}
+     % bottom left corner
+     \put(0,-57){\botl}
+     % bottom plank
+     \multiput(1,-57)(4,0){10}{\botplank}
+     % bottom right corner
+     \put(41,-57){\botprer}
+     \put(42,-57){\botr}
+   \end{picture}%
+}%
+\tunemarkup{pgnexus7}{%
+\setlength{\unitlength}{6.56pt}%
+\fontsize{\unitlength}{\unitlength}\usefont{U}{webo}{xl}{n}
+   \begin{picture}(0,0)(1.6,-55.9)%
+     % top left corner
+     \put(0,0){\topl}
+     % top plank
+     \multiput(1,0)(4,0){9}{\topplank}
+     % top right corner
+     \put(36,0){\topprer}
+     \put(37,0){\topr}
+     % right plank
+     \multiput(37,-1)(0,-4){14}{\hr}
+     \multiput(37,-2)(0,-4){14}{\hhr}
+     \multiput(37,-3)(0,-4){14}{\hhhr}
+     \multiput(37,-4)(0,-4){14}{\hhhhr}
+     % left plank
+     \multiput(0,-1)(0,-4){14}{\hhhhl}
+     \multiput(0,-2)(0,-4){14}{\hl}
+     \multiput(0,-3)(0,-4){14}{\hhl}
+     \multiput(0,-4)(0,-4){14}{\hhhl}
+     % bottom left corner
+     \put(0,-57){\botl}
+     % bottom plank
+     \multiput(1,-57)(4,0){9}{\botplank}
+     % bottom right corner
+     \put(36,-57){\botprer}
+     \put(37,-57){\botr}
+   \end{picture}%
+}%
+\endgroup
+}
+
+%\tunemarkup{pgafour}{\tolerance=400}
+%\tunemarkup{pgletter}{\tolerance=400}
+%\tunemarkup{pgluluhb}{\tolerance=9999}
+\tunemarkup{pgkindledx}{\tolerance=9999}
+\tunemarkup{pghanlin}{\tolerance=9999}
+\tunemarkup{pgkoboaurahd}{\tolerance=9999}
+\tunemarkup{pgnexus7}{\tolerance=9999}
+%\widowpenalty=9000
+%\clubpenalty=9000
+
 \input tex/urantia-hyphen-en.tex
 
 \setlength{\columnsep}{3.5mm}
@@ -167,8 +483,6 @@
 
 \newcommand{\cmark}{\textcolor{ubgreen}{\ding{51}}}
 \newcommand{\xmark}{\textcolor{ubdarkred}{\ding{55}}}
-\newcommand{\nextq}{\textcolor{ubdarkblue}{\ding{223}}}
-\newcommand{\prevq}{\textcolor{ubdarkblue}{\reflectbox{\ding{223}}}}
 
 \newcommand{\hsetoff}{\hspace*{1em}}
 \newcommand{\vsetspace}{\vspace{1ex}}
@@ -193,6 +507,42 @@
 % for TOC entries horizontal spacing
 \newcommand{\numw}{0.08\linewidth}
 \newcommand{\txtw}{0.81\linewidth}
+
+\tunemarkup{pgkobomini}{%
+\newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
+\newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
+\renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
+\renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
+\renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
+\newcommand{\bibpaperfont}{\normalsize}
+\newcommand{\bibpapertitlefont}{\large}
+\definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubfblue}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
+\renewcommand{\bibfnchapsize}{\headerfont\Large}
+\renewcommand{\bibfnvssize}{\headerfont\large}
+\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
+\newcommand{\vsetoff}{\begin{center}\usefont{U}{webo}{xl}{n}\huge ahb\end{center}}
+\newcommand{\subfont}{\fontsize{10}{9}\itshape}
+\newcommand{\parttitlefontsize}{\large}
+\newcommand{\bibbookend}{\fontsize{20}{22}\selectfont}
+\newcommand{\urantiamainfontsize}{20/22}
+\renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{11}{11}\selectfont}
+\renewcommand{\bibtocfont}{\fontsize{10}{11}\selectfont}
+\renewcommand{\author}[1]{{\fontsize{11}{9}\bfseries\itshape\begin{center}#1\end{center}\fancyhead[CE]{\bibheadfont\MakeUppercase{#1}}}}
+\newcommand{\bibsectitlefont}{\fontsize{8}{9}\selectfont}
+\renewcommand{\footnotesize}{\fontsize{16}{18}\selectfont}
+\renewcommand{\usectiontitle}[3]{%
+   {
+     \bibsectitlefont
+     \makebox[0.08\linewidth][r]{#2. }%
+     \makebox[0.85\linewidth][l]{#3\bibdf}%
+     \makebox[0.06\linewidth][r]{\bibpr{p#1_#2}}%
+   }\vspace{-1ex}\linebreak
+}
+}
 
 \tunemarkup{pghanlin}{%
 \newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
